2012-03-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-bug): Don't delete the other windows.  We may be
	using a `gnus-use-full-window' setup (bug#11013).

2012-03-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-backend-trace): Flip default to nil before Emacs
	24.1 release.

2012-03-10  David Edmondson  <dme@dme.org>

	* mm-uu.el (mm-uu-forward-extract): Allow for blank lines between the
	'Forwarded Message' header and the start of the message.

2012-03-04  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* gnus-msg.el (gnus-msg-mail): Call `message-mail' correctly when Gnus
	isn't running (bug#10897).

2012-03-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* tls.el (open-tls-stream): Don't set the dont-query-on-exit flag.
	This is inconsistent with all the other stream functions, which leave
	the setting up to the higher levels (if so wanted) (bug#10931).

2012-02-28  Glenn Morris  <rgm@gnu.org>

	* gmm-utils.el, gnus-agent.el, gnus-score.el, messagexmas.el,
	mm-decode.el: Standardize possessive apostrophe usage.

2012-02-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-column-specs): Protect against TDs with "width: 0%".

2012-02-25  Andreas Schwab  <schwab@linux-m68k.org>

	* parse-time.el (parse-time-string): Allow extractor to return nil.

2012-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-send-authinfo): Work for secure nntp entry in authinfo.

2012-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Remove "soft hyphens".

	* nnimap.el (nnimap-request-list): Return the group names encoded as
	utf8.  Otherwise non-European group names don't work.
	(nnimap-request-newgroups): Ditto.

	* gnus-sum.el (gnus-summary-insert-old-articles): Fix the syntax for
	the default in `read-string' (bug#10757).

	* gnus-msg.el (gnus-group-post-news): Don't bug out on `C-u a' on
	topics (bug#10843).

	* nnimap.el (nnimap-log-command): Add the IMAP address to the log